@@ -33,6 +33,7 @@ This release includes the following bugfixes:
    buffers
  o no longer default-appends ;type= on FTP URLs thru proxies
  o SSL session id caching
+ o POST with callback over proxy requiring NTLM or Digest
 
 This release includes the following known bugs:
 
@@ -52,6 +53,6 @@ advice from friends like these:
 
  Dan Fandrich, Gisle Vanem, Toby Peterson, Yang Tse, Daniel Black,
  Robin Johnson, Michal Marek, Ates Goral, Andres Garcia, Rob Crittenden,
- Emil Romanus, Alessandro Vesely, Ray Pekowski
+ Emil Romanus, Alessandro Vesely, Ray Pekowski, Spacen Jasset
  
         Thanks! (and sorry if I forgot to mention someone)
